2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the REBOOT command in webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the UPGRADE command in webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the NTP command in webhostd(8).
2015-12-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the IP command in webhostd(8).