@@ -2,3 +2,5 @@
 ControlPort=6352
 NtpConfigurationFile=/etc/ntp.conf
 NtpServiceName=ntp
+ServiceCommand=/usr/bin/wtd
+ServiceRespawnDelay=100
